--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/icons/icon.png" type="image/x-icon" />
     <!-- Linking BoxIcon for Icon -->
     <link
       href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
